--- a/GITHUB/LATEX/secciones/00SECCION.tex
+++ b/GITHUB/LATEX/secciones/00SECCION.tex
@@ -11,3 +11,9 @@ Para poder ver los valores ya configurados en el entorno se escribe el siguiente
 \begin{lstlisting}
   git config --global -l
 \end{lstlisting}
+
+Para configurar el end of file se usa el siguiente comando
+
+\begin{lstlisting}
+  git config --global core.autocrlf true
+\end{lstlisting}
