--- a/LATEX/LATEX/secciones/00SECCION.tex
+++ b/LATEX/LATEX/secciones/00SECCION.tex
@@ -9,3 +9,7 @@ Otra posibilidad es importando un archivo externo de la siguiente manera:
   \lstinputlisting{<ruta_del_archivo>}
 \end{lstlisting}
 
+Para quitar los n\'umeros de l\'inea de los c\'odigo se escribe lo siguiente:
+
+\lstinputlisting{secciones/CODES/lst2}
+
