--- a/GITHUB/LATEX/secciones/00SECCION.tex
+++ b/GITHUB/LATEX/secciones/00SECCION.tex
@@ -140,3 +140,32 @@ Para agregar una imagen debemos:
 \begin{lstlisting}[numbers=none]
   ![nombre_imagen](url)
 \end{lstlisting}
+
+\subsection{Agregar C\'odigo}
+
+Para agregar c\'odigo se deben usar tres comillas de las inclinadas hacia la izquierda como se muestra:
+
+\begin{lstlisting}[numbers=none]
+  ```print( "hola Mundo" )```
+\end{lstlisting}
+
+\subsection{Cuadros de check}
+para agregar cuadros vac\'ios y con check hacemos lo siguiente:
+
+
+\begin{lstlisting}[numbers=none]
+  - [x] comprar leche
+  - [ ] comprar atun
+\end{lstlisting}
+
+\subsection{Tablas}
+
+Para crear una tabla b\'asica hacemos lo siguiente:
+
+\begin{lstlisting}[numbers=none]
+  first header | second header
+  ------------ | -------------
+  cell 1 | cell 2
+  cell a | cell b
+  sumas | restas
+\end{lstlisting}
