--- a/JAVASCRIPT/LATEX/secciones/00SECCION.tex
+++ b/JAVASCRIPT/LATEX/secciones/00SECCION.tex
@@ -13,7 +13,18 @@ En el siguiente ejemplo se muestra como usar etiquetas en el html y con estas in
 \textbf{HTML}
 \lstinputlisting{secciones/CODES/ejemplo1.html}
 
+Para que funcionen las etiquetas, la llamada del javascript debe ir abajo de las llamadas de etiqueta del html.
 
 \textbf{Javascript}
 \lstinputlisting{secciones/CODES/ejemplo1.js}
+
+
+El "use strict" con el que empieza el file de javascript se utiliza para evitar interpretaciones por parte de javascript, no correr\'a ning\'un c\'odigo que no sea correcto, en caso de no tener el "use estrict" podr\'a correr c\'odigo que no es sint\'acticamente correcto lo que puede llevar a errores graves.
+
+\section{alerts, prompts y terminal message}
+
+En el siguiente c\'odigo de javascript se muestran alerts, prompts y mensajes de terminal.
+
+
+\lstinputlisting{secciones/CODES/ejemplo2.js}
 
