--- a/JAVASCRIPT/LATEX/javascript.tex
+++ b/JAVASCRIPT/LATEX/javascript.tex
@@ -1,8 +1,14 @@
 
 \input{./comandos/paquetes.tex}
 
-\begin{document}
+\title{Sections and Chapters}
+\author{Darkgambler}
+\date{ }
 
+\begin{document}
+\maketitle
+  
+\tableofcontents
 \input{./comandos/Zportada.tex}
 \input{./secciones/0AllSections.tex}
 
