--- a/JAVASCRIPT/LATEX/secciones/00SECCION.tex
+++ b/JAVASCRIPT/LATEX/secciones/00SECCION.tex
@@ -21,10 +21,27 @@ Para que funcionen las etiquetas, la llamada del javascript debe ir abajo de las
 
 El "use strict" con el que empieza el file de javascript se utiliza para evitar interpretaciones por parte de javascript, no correr\'a ning\'un c\'odigo que no sea correcto, en caso de no tener el "use estrict" podr\'a correr c\'odigo que no es sint\'acticamente correcto lo que puede llevar a errores graves.
 
-\section{alerts, prompts y terminal message}
+\section{alerts, prompts, write y terminal message}
 
-En el siguiente c\'odigo de javascript se muestran alerts, prompts y mensajes de terminal.
+En el siguiente c\'odigo de javascript se muestran alerts, prompts, document write y mensajes de terminal. Tambi\'en se muestra el uso del signo $+$ para concatenar strings.
 
 
 \lstinputlisting{secciones/CODES/ejemplo2.js}
 
+\section{Backtikcs (`)}
+La comilla lateral se utiliza para poder invocar variables o c\'odigo html dentro de un bloque, como se muestra en el siguiente ejemplo:
+
+\lstinputlisting{secciones/CODES/backticks.js}
+
+\section{Operadores de asignacion y l\'ogicos}
+
+Los operadores de asignaci\'on y operadores l\'ogicos que ofrece JavaScript son los mismos de python, c y verilog, por lo que ya son bien sabidos.
+
+\section{Condicionales}
+Los condicionales son similares a C, y veremos un ejemplo:
+
+\lstinputlisting{secciones/CODES/condicionales.js}
+
+\section{Arrays normales y asociativos}
+
+un array normal se declara como sigue:
